--- a/home-page.html
+++ b/home-page.html
@@ -28,6 +28,8 @@
     }
     .img1 {
       margin-left: 100px;
+      width: 250px;
+      height: 250px;
     }
     .img2{
       margin-left: 122px;
@@ -41,9 +43,8 @@
         <h1 class="h1">Doodle Bou</h1>
         <h3 class="h3">Luxury Apparel</h3>
         <div class="div">
-          <a href="yellow-shirt.html" target="_blank"><img src="shirt-1.jpg" alt="yellow-shirt" class="img1" width="250px" height="250px"></a>
+          <a href="yellow-shirt.html" target="_blank"><img src="shirt-1.jpg" alt="yellow-shirt" class="img1"></a>
           <img src="shirt-2.jpg" alt="black-shirt" class="img2" width="250px" height="250px">
-          <img src="shirt-3.jpg" alt="blue-shirt" class="img3" width="250px" height="250px">
-          
+          <img src="shirt-3.jpg" alt="blue-shirt" class="img3" width="250px" height="250px">          
         </div>
     </body>
