--- a/yellow-shirt.html
+++ b/yellow-shirt.html
@@ -11,7 +11,8 @@
 </head>
 	<style>
         .img {
-            margin-left: 600px;
+            width: 400px;
+            height: 400px;
         }
         .h3 {
             font-family: Cinzel;
@@ -20,8 +21,27 @@
         .p {
             text-align: center;
         }
+        .div{
+            text-align: center;
+        }
     </style>
     <body bgcolor="silver">
         <h3 class="h3">Doodle Bou</h3>
-        <img src="shirt-1.jpg" alt="yellow-shirt" width="400px" height="400px" class="img">
-        <p>This shirt is made of Egyptian cotton imported from northeast Africa.</p>
+        <div class="div">
+        <img src="shirt-1.jpg" alt="yellow-shirt" class="img"><br>
+        </div>
+        <div class="div">
+        <form action="emilywilkerson01@gmail.com"></form>
+        <label for="size">Size</label>
+        <select name="size" id="size">
+            <option value="small">Small</option>
+            <Option value="medium">Medium</Option>
+            <option value="large">Large</option>
+            <option value="xl">XL</option>
+        </select><br><br>
+        </div>
+        <div class="div">
+        <label for="quantity">Quantity</label>
+        <input type="text" name="quantity" size="5px">
+        </div>
+    </body>
