--- a/home-page.html
+++ b/home-page.html
@@ -37,14 +37,43 @@
     .img3 {
       margin-left: 130px;
     }
+    .card {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      max-width: 300px;
+      margin: auto;
+      text-align: center;
+      font-family: 'IBM Plex Sans', sans-serif;
+    }
+    .price {
+      color: white;
+      font-size: 22px;
+    }
+    .card button {
+     border: none;
+     outline: 0;
+     padding: 12px;
+     color: white;
+     background-color: #000;
+     text-align: center;
+     cursor: pointer;
+     width: 100%;
+     font-size: 18px;
+    }
+    .card button:hover {
+     opacity: 0.7;
+    }
     </style>
     <title>Doodle Bou</title>
     <body class="body">
         <h1 class="h1">Doodle Bou</h1>
         <h3 class="h3">Luxury Apparel</h3>
-        <div class="div">
-          <a href="yellow-shirt.html" target="_blank"><img src="shirt-1.jpg" alt="yellow-shirt" class="img1"></a>
-          <img src="shirt-2.jpg" alt="black-shirt" class="img2" width="250px" height="250px">
-          <img src="shirt-3.jpg" alt="blue-shirt" class="img3" width="250px" height="250px">          
+        <div class="card">
+          <img src="shirt-1.jpg" alt="yellow-shirt" style="width:100%">
+          <h1>Yellow Shirt</h1>
+          <p class="price">$79.99</p>
+          <p>This shirt is hand-sewn with the finest egyptian cotton, imported from northeast Africa.</p>
+          <p><button>Add to Cart</button></p>
         </div>
+          <img src="shirt-2.jpg" alt="black-shirt" class="img2" width="250px" height="250px">
+          <img src="shirt-3.jpg" alt="blue-shirt" class="img3" width="250px" height="250px">
     </body>
