--- a/home-page.html
+++ b/home-page.html
@@ -67,13 +67,27 @@
     <body class="body">
         <h1 class="h1">Doodle Bou</h1>
         <h3 class="h3">Luxury Apparel</h3>
+        <div class="div">
         <div class="card">
           <img src="shirt-1.jpg" alt="yellow-shirt" style="width:100%">
           <h1>Yellow Shirt</h1>
           <p class="price">$79.99</p>
-          <p>This shirt is hand-sewn with the finest egyptian cotton, imported from northeast Africa.</p>
+          <p>This garment is hand-sewn with the finest egyptian cotton, imported from northeast Africa.</p>
           <p><button>Add to Cart</button></p>
         </div>
-          <img src="shirt-2.jpg" alt="black-shirt" class="img2" width="250px" height="250px">
-          <img src="shirt-3.jpg" alt="blue-shirt" class="img3" width="250px" height="250px">
+        <div class="card">
+          <img src="shirt-2.jpg" alt="black-shirt" style="width:100%">
+          <h1>Black Shirt</h1>
+          <p class="price">$89.99</p>
+          <p> This garment is a hybrid composed with egyptian cotton and performance mesh for a more breathable but classic look.</p>
+          <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card">
+          <img src="shirt-3.jpg" alt="blue-shirt" style="width:100%">
+          <h1>Blue Shirt</h1>
+          <p class="price">$99.99</p>
+          <p> This garment is made of performance mesh material for the most comfortable and breathable fit possible.</p>
+          <p><button>Add to Cart</button></p>
+        </div>
+        </div>
     </body>
