--- a/home-page.html
+++ b/home-page.html
@@ -11,6 +11,9 @@
     <meta name="keywords" content="">
   </head>
 	<style>
+    .html {
+      min-height: 200%;
+    }
     .h1 {
       font-size: 100px;
       font-family: Cinzel;
@@ -73,21 +76,29 @@
           <h1>Yellow Shirt</h1>
           <p class="price">$79.99</p>
           <p>This garment is hand-sewn with the finest egyptian cotton, imported from northeast Africa.</p>
-          <p><button>Add to Cart</button></p>
+          <p><button>Add to Cart</button></p><br>
         </div>
         <div class="card">
           <img src="shirt-2.jpg" alt="black-shirt" style="width:100%">
           <h1>Black Shirt</h1>
           <p class="price">$89.99</p>
           <p> This garment is a hybrid composed with egyptian cotton and performance mesh for a more breathable but classic look.</p>
-          <p><button>Add to Cart</button></p>
+          <p><button>Add to Cart</button></p><br>
         </div>
         <div class="card">
           <img src="shirt-3.jpg" alt="blue-shirt" style="width:100%">
           <h1>Blue Shirt</h1>
           <p class="price">$99.99</p>
           <p> This garment is made of performance mesh material for the most comfortable and breathable fit possible.</p>
-          <p><button>Add to Cart</button></p>
+          <p><button>Add to Cart</button></p><br>
         </div>
         </div>
+       <div class="div">
+         <div class="card">
+         <img src="pants-1.jpg" alt="grey-pants" style="width:100%">
+         <h1>Grey Pants</h1>
+         <p class="price">79.99</p>
+         <p>This pair of pants...</p>
+         <p><button>Add to Cart</button></p><br>
+       </div>
     </body>
