--- a/home-page.html
+++ b/home-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
   </head>
 	<style>
     .html {
-      min-height: 200%;
+      min-height: 300%;
     }
     .h1 {
       font-size: 100px;
@@ -29,6 +29,9 @@
     .div {
       column-count: 3;
     }
+    .div1 {
+      column-count: 3;
+    }
     .img1 {
       margin-left: 100px;
       width: 250px;
@@ -43,9 +46,10 @@
     .card {
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       max-width: 300px;
-      margin: auto;
+      margin: 100px;
       text-align: center;
       font-family: 'IBM Plex Sans', sans-serif;
+      display: inline-block;
     }
     .price {
       color: white;
@@ -76,29 +80,30 @@
           <h1>Yellow Shirt</h1>
           <p class="price">$79.99</p>
           <p>This garment is hand-sewn with the finest egyptian cotton, imported from northeast Africa.</p>
-          <p><button>Add to Cart</button></p><br>
+          <p><button>Add to Cart</button></p>
         </div>
         <div class="card">
           <img src="shirt-2.jpg" alt="black-shirt" style="width:100%">
           <h1>Black Shirt</h1>
           <p class="price">$89.99</p>
           <p> This garment is a hybrid composed with egyptian cotton and performance mesh for a more breathable but classic look.</p>
-          <p><button>Add to Cart</button></p><br>
+          <p><button>Add to Cart</button></p>
         </div>
         <div class="card">
           <img src="shirt-3.jpg" alt="blue-shirt" style="width:100%">
           <h1>Blue Shirt</h1>
           <p class="price">$99.99</p>
           <p> This garment is made of performance mesh material for the most comfortable and breathable fit possible.</p>
-          <p><button>Add to Cart</button></p><br>
+          <p><button>Add to Cart</button></p>
         </div>
         </div>
-       <div class="div">
-         <div class="card">
+       <div class="div1">
+       <div class="card">
          <img src="pants-1.jpg" alt="grey-pants" style="width:100%">
          <h1>Grey Pants</h1>
-         <p class="price">79.99</p>
+         <p class="price">$79.99</p>
          <p>This pair of pants...</p>
-         <p><button>Add to Cart</button></p><br>
+         <p><button>Add to Cart</button></p>
+       </div>
        </div>
     </body>
